// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Word renders with color amber 1`] = `
<text
  className="ax-word ax-word--amber"
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color blue 1`] = `
<text
  className="ax-word ax-word--blue"
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color brown 1`] = `
<text
  className="ax-word ax-word--brown"
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color chartreuse 1`] = `
<text
  className="ax-word ax-word--chartreuse"
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color green 1`] = `
<text
  className="ax-word ax-word--green"
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color grey 1`] = `
<text
  className="ax-word ax-word--grey"
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color lilac 1`] = `
<text
  className="ax-word ax-word--lilac"
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color orange 1`] = `
<text
  className="ax-word ax-word--orange"
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color pink 1`] = `
<text
  className="ax-word ax-word--pink"
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color purple 1`] = `
<text
  className="ax-word ax-word--purple"
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color rose 1`] = `
<text
  className="ax-word ax-word--rose"
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with color teal 1`] = `
<text
  className="ax-word ax-word--teal"
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(undefined,undefined)"
/>
`;

exports[`Word renders with defaultProps 1`] = `
<text
  className="ax-word"
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": undefined,
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;
